--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apollo-boost": "^0.4.9",
+    "bootstrap": "^4.5.0",
+    "graphql": "^15.1.0",
+    "lodash.flowright": "^3.5.0",
     "react": "^16.13.0",
+    "react-apollo": "^3.1.5",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
